--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,20 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>commerce-cloud-registry</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>com.mbb</groupId>
     <artifactId>commerce-cloud</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath/>
   </parent>
 
   <name>Commerce Cloud Registry</name>
 
   <modules>
-    <module>commerce-consul</module>
+    <module>commerce-nacos</module>
+    <!--<module>commerce-consul</module>-->
     <!--<module>commerce-eureka</module>-->
     <!--<module>commerce-zookeeper</module>-->
   </modules>
