--- a/commerce-nacos/docker/docker-compose.yml
+++ b/commerce-nacos/docker/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   nacos:
     image: nacos/nacos-server:latest
     container_name: nacos-standalone
+    restart: always
     environment:
     - PREFER_HOST_MODE=hostname
     - MODE=standalone
