--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,13 @@
     <!--<module>commerce-eureka</module>-->
     <!--<module>commerce-zookeeper</module>-->
   </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jfrog.buildinfo</groupId>
+        <artifactId>artifactory-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
